# ml_solver

./: .gitignore  README.md  dev_steps.md  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  setup.cfg  test.ipynb  tox.ini
basic_ml/: requirements.txt
basic_ml/preprocessing/: embedding.py
basic_ml/tuning/: model_assembly.py  modeling.py
src/basic_ml/evaluation/: evaluate.py
src/mlexec/: __init__.py  execution.py
src/mlexec/evaluation/: evaluate.py
src/mlexec/preprocessing/: embedding.py  prep_train_data.py  preprocessing_main.py
src/mlexec/tuning/: model_assembly.py  modeling.py
tests/: dummy_test.py
