[metadata]
name = slapping
description = The basic ML package is used to run scikit-learn type models with high abstraction, automating repetative tasks in training data preparation such as imputation, encoding etc. and during model tuning such as running CV, tuning and training.
author = DivM11
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    basic_ml
install_requires =
    pandas
    hyperopt
    scikit-learn
    tensorflow
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160